# zephyr_module_template

./: CMakeLists.txt  Kconfig  README.md  mainTemplate.c  rename_module.sh
drvr/inc/: msgqTemplate.h  template.h  wdtTemplate.h  zbusTemplate.h
drvr/src/: msgqTemplate.c  template.c  wdtTemplate.c  zbusTemplate.c
dts/bindings/: misty,template-group.yaml  misty,template-instance.yaml  vendor-prefixes.txt
host/: hostTemplateTest.sh
shell/src/: shellTemplate.c
test/: CMakeLists.txt  Kconfig  native_sim.overlay  prj.conf  testcase.yaml
test/src/: testTemplate.c
zephyr/: module.yaml
